# PoketDevTools

./: .gitignore  Dockerfile  README.md  freshproject.bat  pyproject.toml
autolinter/: README.md  autolinter.bat  main.py
autoproject/: README.md  autoproject.bat  logomaker.py  main.py
autotrello/: README.md  autotrello.bat  main.py
freshproject/: main.py
projectgenerator/: README.md  main.py  projectgenerator.bat
